# find_far_most_point

./: .gitignore  CMakeLists.txt  README.md  test_report.cpp
data/: example_input.txt  example_pins.txt
docs/superpowers/plans/: 2026-04-14-point-analyzer-implementation.md
docs/superpowers/specs/: 2026-04-14-point-analyzer-optimization-design.md
src/: main.cpp  point_analyzer.cpp  point_analyzer.h  report_generator.cpp  report_generator.h
tests/: test_point_analyzer.cpp
